# STM32

./: .clang-format  .gitignore  .pre-commit-config.yaml  Readme.md  dependencies.sh  pre-commit.sh
Embedded/STM/STM32F407Discovery/ProofOfConcept/: linkerScript.ld  main.c  main.h  makefile  startup.c
Embedded/STM/STM32F407Discovery/ProofOfConcept/C++/: CMakeLists.txt  build.sh
Embedded/STM/STM32F407Discovery/ProofOfConcept/C++/src/: main.cpp
STM32F407Discovery/: CMakeLists.txt  build.sh  load.sh  targetToolchain.cmake
STM32F407Discovery/ProofOfConcept/: final.map  led.c  linkerScript.ld  main.c  makefile  objdump.disassemble  objdump.disassembleExe  objdump.out  startup.c  syscalls.c
STM32F407Discovery/ProofOfConcept/C++/: CMakeLists.txt  build.sh
STM32F407Discovery/ProofOfConcept/C++/src/: main.cpp  startup.cpp
STM32F407Discovery/ProofOfConcept/C++/unitTestPoC/: CMakeLists.txt  sum.h  testing.cpp
STM32F407Discovery/ProofOfConcept/I2CScreen/.metadata/.plugins/org.eclipse.cdt.core/: Screen.language.settings.xml
STM32F407Discovery/ProofOfConcept/I2CScreen/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
STM32F407Discovery/ProofOfConcept/I2CScreen2/: .cproject  .mxproject  .project  Screen.ioc  Screen.launch  readme.md
STM32F407Discovery/ProofOfConcept/I2CScreen2/Core/Inc/: i2c-lcd.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
STM32F407Discovery/ProofOfConcept/I2CScreen2/Core/Src/: i2c-lcd.c  main.c  stm32f4xx_hal_msp.c
STM32F407Discovery/ProofOfConcept/I2CScreen2/Debug/: Screen.list  Screen.map  makefile  objects.mk  sources.mk
STM32F407Discovery/ProofOfConcept/I2CScreen2/Debug/Core/Src/: i2c-lcd.d  main.d  main.su  stm32f4xx_hal_msp.d  stm32f4xx_it.d  subdir.mk
STM32F407Discovery/ProofOfConcept/I2CScreen2/Debug/Core/Startup/: subdir.mk
STM32F407Discovery/ProofOfConcept/I2CScreen2/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_cortex.su  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_i2c.d  stm32f4xx_hal_i2c_ex.d  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim_ex.d  subdir.mk
STM32F407Discovery/ProofOfConcept/I2CScreen2/Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f407xx.h  stm32f4xx.h  system_stm32f4xx.h
STM32F407Discovery/ProofOfConcept/I2CScreen2/Drivers/CMSIS/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h  mpu_armv7.h  mpu_armv8.h
STM32F407Discovery/ProofOfConcept/I2CScreen2/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h  stm32f4xx_hal_cortex.h  stm32f4xx_hal_def.h  stm32f4xx_hal_dma.h  stm32f4xx_hal_dma_ex.h  stm32f4xx_hal_exti.h  stm32f4xx_hal_flash.h  stm32f4xx_hal_flash_ex.h  stm32f4xx_hal_flash_ramfunc.h  stm32f4xx_hal_gpio.h  stm32f4xx_hal_gpio_ex.h  stm32f4xx_hal_i2c.h  stm32f4xx_hal_i2c_ex.h  stm32f4xx_hal_pwr.h  stm32f4xx_hal_pwr_ex.h  stm32f4xx_hal_rcc.h  stm32f4xx_hal_rcc_ex.h  stm32f4xx_hal_tim.h  stm32f4xx_hal_tim_ex.h
STM32F407Discovery/ProofOfConcept/I2CScreen2/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
STM32F407Discovery/cmake/: hostToolchainForUnitTesting.cmake  target.cmake  targetToolchain.cmake
STM32F407Discovery/src/: CMakeLists.txt
STM32F407Discovery/src/apps/: CMakeLists.txt
STM32F407Discovery/src/apps/i2c/: CMakeLists.txt  i2c.cpp
STM32F407Discovery/src/apps/led/: CMakeLists.txt  led.cpp
STM32F407Discovery/src/apps/ledButton/: CMakeLists.txt  ledButton.cpp
STM32F407Discovery/src/apps/ledButtonInterrupt/: CMakeLists.txt  ledButtonInterrupt.cpp
STM32F407Discovery/src/apps/spi/: CMakeLists.txt  spi.cpp
STM32F407Discovery/src/apps/spiInterrupt/: CMakeLists.txt  spiInterrupt.cpp
STM32F407Discovery/src/externalPeripherals/: i2cLCD.h
STM32F407Discovery/src/processorSpecific/: baseAddresses.h  interruptRegisters.h
STM32F407Discovery/src/targetSpecific/: gpioRegisters.h  linkerScript.ld  rccRegisters.h  registerType.h  registersBaseAddresses.h  startup.cpp
STM32F407Discovery/src/targetSpecific/drivers/: gpio.h  gpioRegisters.h  i2c.h  interrupt.h  rccRegisters.h  spi.h
STM32F407Discovery/src/targetSpecific/registers/: extiRegisters.h  gpioRegisters.h  i2cRegisters.h  rccRegisters.h  registersBaseAddresses.h  spiRegisters.h  syscfgRegisters.h
STM32F407Discovery/src/utils/: helpers.h  registerAccess.h
STM32F407Discovery/tst/: CMakeLists.txt
STM32F407Discovery/tst/drivers/: CMakeLists.txt  gpioRegistersTest.cpp  rccRegistersTest.cpp
STM32F407Discovery/tst/registers/: CMakeLists.txt  extiRegistersTest.cpp  gpioRegistersTest.cpp  i2cRegistersTest.cpp  interruptRegistersTest.cpp  rccRegistersTest.cpp  spiRegistersTest.cpp  syscfgRegistersTest.cpp
STM32F407Discovery/tst/utils/: CMakeLists.txt  registerAccessTest.cpp
